# Doing

./: .editorconfig  Directory.Build.props  Directory.Packages.props  Doing.slnx
.doing/: config.toml
building/Doing.Building/: Doing.Building.csproj  Global.cs  Program.cs  packages.lock.json
samples/Doing.Analyzer.Sample/: Doing.Analyzer.Sample.csproj  Examples.cs  Spaceship.cs
samples/Doing.Generator.Sample/: Doing.Generator.Sample.csproj  SampleTask.cs  packages.lock.json
samples/Doing.Sample/: Doing.Sample.csproj  Program.cs  packages.lock.json
sources/managed/Doing.Abstractions/: BuildingPropertySet.cs  Doing.Abstractions.csproj  ExecutionResult.cs  ExecutionResultExtensions.cs  IProcessRunner.cs  IProject.cs  IProjectSource.cs  ITarget.cs  ITask.cs  ITaskExecutionContext.cs  ITaskFactory.cs  ITaskName.cs  ITaskRegister.cs  Moniker.cs  ParameterAttribute.cs  ProcessResult.cs  ProcessSpec.cs  ProjectAttribute.cs  ProjectSet.cs  Property.cs  PropertyExtensions.cs  PropertySet.cs  (+5 more)
sources/native/doing/: Cargo.toml
sources/native/doing/src/: main.rs
tests/Doing.Analyzer.Tests/: AnalyzerTestHelper.cs  Doing.Analyzer.Tests.csproj  HookMethodSignatureAnalyzersTests.cs  packages.lock.json
tests/Doing.Core.Tests/: Doing.Core.Tests.csproj  TaskSetExtensionsTests.cs  packages.lock.json
tests/Doing.Generator.Tests/: CollectTargetsInfoSourceGeneratorTests.cs  Doing.Generator.Tests.csproj  GeneratorTestHelper.cs  TaskFactoryGeneratorTests.cs  packages.lock.json
tests/Doing.IO.Tests/: DPathTests.cs  Doing.IO.Tests.csproj  FileSystemTests.cs  packages.lock.json
(+83 files in other folders)
