[package]
name = "doing"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/moegodot/Kawayi.Doing"

[dependencies]
anyhow = "1.0.100"
globset = "0.4.18"
ignore = "0.4.24"
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting"] }
toml = "0.8.23"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3.23.0"
